# up7000_buildroot

./: .gitignore  README.md
app/: CMakeLists.txt
app/detection/: CMakeLists.txt
app/detection/src/: main.cpp
app/hello/: CMakeLists.txt
app/src/: main.cpp
br2-external/: Config.in  external.desc  external.mk
br2-external/package/intel-compute-runtime/: Config.in  intel-compute-runtime.hash  intel-compute-runtime.mk
br2-external/package/intel-ipp/: Config.in  intel-ipp.hash  intel-ipp.mk
br2-external/package/openvino-benchmark/: Config.in  openvino-benchmark.hash  openvino-benchmark.mk
br2-external/package/openvino-benchmark/src/: CMakeLists.txt  benchmark.cpp
br2-external/package/openvino-demo/: Config.in  openvino-demo.hash  openvino-demo.mk
br2-external/package/openvino-demo/src/: CMakeLists.txt  detect.cpp
br2-external/package/openvino-runtime/: Config.in  openvino-runtime.hash  openvino-runtime.mk
buildroot-2024.02.9/: .gitignore
buildroot-2024.02.9/board/up7000/: genimage.cfg  grub.cfg  linux.config  post-build.sh  post-image.sh
buildroot-2024.02.9/board/up7000/rootfs-overlay/etc/network/: interfaces
buildroot-2024.02.9/board/up7000/rootfs-overlay/etc/ssh/: sshd_config
buildroot-2024.02.9/configs/: up7000_defconfig
buildroot-2024.02.9/dl/intel-compute-runtime/: intel-level-zero-gpu_1.3.30049.6_amd64.deb  intel-opencl-icd_24.26.30049.6_amd64.deb
docs/: UP-7000-datasheet (1).txt  disk-backup-restore.md
